# cms-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  run.sh
src/: lib.rs  main.rs
src/controller/: default_controller.rs  image_controller.rs  info_text_controller.rs  info_text_to_tile_controller.rs  mod.rs  tile_controller.rs
src/controller/apartment_controller/: apartment_content_controller.rs  apartment_description_controller.rs  apartment_details_controller.rs  apartment_price_controller.rs  details_to_apartment_controller.rs  mod.rs
src/controller/info_text_controller/: info_text_controller.rs  info_text_to_tile_controller.rs  mod.rs
src/controller/tile_controller/: mod.rs  tile_controller.rs  tile_order_controller.rs
src/controller/user_controller/: login_controller.rs  user_controller.rs
src/model/: mod.rs  model_template.rs
src/model/fewo/: apartment_content.rs  apartment_description.rs  apartment_details.rs  apartment_price.rs  details_to_apartment.rs  mod.rs
src/model/image/: image.rs  images_template.rs  mod.rs
src/model/info_text/: info_text.rs  info_text_to_tile.rs  mod.rs
src/model/kachel/: tile.rs
src/model/tile/: mod.rs  tile.rs  tile_order.rs
src/model/user/: login.rs  mod.rs  register.rs  user.rs  user_util.rs
src/service/: db_connector.rs  mod.rs  request_config.rs  response_config.rs
src/util/: default_status_response.rs  mod.rs  rest_route.rs
tests/: tests.rs
