[package]
name = "backend"
version = "0.1.0"
authors = ["patrick sterk <patrick.sterk@protonmail.com>"]

[dependencies]

# Rocket Webserver
rocket = "0.4.2"
rocket_codegen = "0.4.2"

# Serialization/Deserializion
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
serde_bytes = "0.11.3"

# DB Connection
mysql= "17.0.0"

# Environment
dotenv = "0.15.0"

# base 64 encoder
base64 = "0.11.0"

# hasher
sha2 = "0.8.0"
rand = "0.7.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
