[package]
name = "backend"
version = "0.1.0"
authors = ["patrick sterk <patrick.sterk@protonmail.com>"]
edition = "2018"
license = "Unlicense or MIT"

[dependencies]
# Rocket Webserver
rocket = "0.4.5"
rocket_codegen = "0.4.5"

# Serialization/Deserializion
serde = "1.0.114"
serde_json = "1.0.57"
serde_derive = "1.0.114"
serde_bytes = "0.11.5"

# DB Connection
mysql= "17.0.0"

# Environment
dotenv = "0.15.0"

# base 64 encoder
base64 = "0.12.3"

# hasher
sha2 = "0.8.0"
rand = "0.7.3"
ring = "0.16.15"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
